--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>衣物回收再设计项目 - 让旧衣焕发新生</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/components.css">
-    <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="/midd/main.css">
+    <link rel="stylesheet" href="/midd/components.css">
+    <link rel="stylesheet" href="/midd/responsive.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -656,4 +656,5 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/components.js"></script>
 </body>
+
 </html>
